[tool.poetry]
name = "davidkhala.spark"
version = "0.0.3"
description = ""
authors = ["David Liu <david-khala@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "davidkhala" }]

[tool.poetry.dependencies]
python = "^3.12, <3.14"
# extras
pyspark = { version = "*", optional = true, extras = ["connect"] }

[tool.poetry.group.dev.dependencies]
pytest = "*"
setuptools = "*" # for ModuleNotFoundError: No module named 'distutils'
davidkhala-devops = { version = "*", extras = ["new-relic"] }
davidkhala-databricks = "*"
[tool.poetry.extras]
apache = ["pyspark"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
